tests/errors/BadDataCon2.hs
module BadDataCon2 where

{-@ data T = Cuthb { fldX :: Int, fldY :: Int } @-}

data T = Cuthb { fldX :: Int }
